fix some codeql issues (#756)